--- a/.github/workflows/index.yml
+++ b/.github/workflows/index.yml
@@ -13,8 +13,8 @@ jobs:
       uses: actions/checkout@v3
     - name: "Create Pages Archive"
       run: |
-        python3 ascii.py > index.html
-        tar cf - index.html | gzip > github-pages.tar.gz
+        mkdir -p _site
+        python3 ascii.py > _site/index.html
     - name: "Upload Archive"
       uses: actions/upload-pages-artifact@v1
 
